--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,11 @@ S3method("$",feather_genoprob)
 S3method("[",feather_genoprob)
 S3method("[[",feather_genoprob)
 S3method(cbind,feather_genoprob)
+S3method(length,feather_genoprob)
 S3method(names,feather_genoprob)
 S3method(rbind,feather_genoprob)
 S3method(subset,feather_genoprob)
-export("$.feather_genoprob")
-export("[.feather_genoprob")
-export("[[.feather_genoprob")
 export(cbind.feather_genoprob)
 export(feather2calc_genoprob)
 export(feather_genoprob)
-export(names.feather_genoprob)
 export(rbind.feather_genoprob)
-export(subset.feather_genoprob)
