--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ S3method(subset,feather_genoprob)
 export(cbind.feather_genoprob)
 export(feather2calc_genoprob)
 export(feather_genoprob)
+export(feather_genoprob_list)
 export(rbind.feather_genoprob)
