added dim and dimnames methods; added restore; updated vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method("$",feather_genoprob)
 S3method("[",feather_genoprob)
 S3method("[[",feather_genoprob)
 S3method(cbind,feather_genoprob)
+S3method(dim,feather_genoprob)
+S3method(dimnames,feather_genoprob)
 S3method(length,feather_genoprob)
 S3method(names,feather_genoprob)
 S3method(rbind,feather_genoprob)
@@ -12,4 +14,5 @@ export(cbind.feather_genoprob)
 export(feather2calc_genoprob)
 export(feather_genoprob)
 export(feather_genoprob_list)
+export(feather_genoprob_restore)
 export(rbind.feather_genoprob)
