--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,6 @@ export(feather_genoprob)
 export(feather_genoprob_list)
 export(feather_genoprob_restore)
 export(rbind.feather_genoprob)
+importFrom(dplyr,bind_cols)
+importFrom(feather,read_feather)
+importFrom(feather,write_feather)
