--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Version: 0.2-4
 Date: 2017-03-21
 Title: Feather Database for qtl2 genotype probabilities
 Description: Functions to rbind, cbind and subset `calc_genoprob` objects.
-Author: Petr Simecek <Petr.Simecek@jax.org> and Brian S Yandell <byandell@wisc.edu>
+Author: Petr Simecek <Petr.Simecek@jax.org>, Brian S Yandell <byandell@wisc.edu>,
+    and Karl W Broman <kbroman@biostat.wisc.edu>
 Maintainer: Petr Simecek <Petr.Simecek@jax.org>
 Depends:
     R (>= 3.1.0)
@@ -11,6 +12,7 @@ Imports:
     feather,
     dplyr
 Suggests:
+    testthat,
     qtl2geno (>= 0.5-8),
     qtl2scan (>= 0.5-7)
 License: GPL-3
