--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: qtl2feather
 Version: 0.2-4
 Date: 2017-03-21
-Title: Feather Database for qtl2 genotype probabilities
+Title: Feather Database for R/qtl2 Genotype Probabilities
 Description: Functions to rbind, cbind and subset `calc_genoprob` objects.
 Author: Petr Simecek <Petr.Simecek@jax.org>, Brian S Yandell <byandell@wisc.edu>,
     and Karl W Broman <kbroman@biostat.wisc.edu>
