--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,25 @@ r_github_packages:
  - rqtl/qtl2geno
  - rqtl/qtl2scan
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.9
+      - g++-4.9
+      - gfortran-4.9
+
+before_install: |
+  mkdir ~/.R
+  cat <<EOF > ~/.R/Makevars
+  CXX=g++-4.9
+  CXX1X=g++-4.9
+  CXX1XSTD=-std=c++11
+
 warnings_are_errors: true
 
 notifications:
   email:
     on_success: change
     on_failure: always
-
-before_script:
-  - export PKG_NAME=$(Rscript -e 'cat(paste0(devtools::as.package(".")$package))')
-  - export PKG_TARBALL=$(Rscript -e 'pkg <- devtools::as.package("."); cat(paste0(pkg$package,"_",pkg$version,".tar.gz"))')
-  - R CMD build --no-build-vignettes .
-  - R CMD INSTALL ${PKG_TARBALL}
-  - rm ${PKG_TARBALL}
-  - echo "Session info:"
-- Rscript -e "library(${PKG_NAME});devtools::session_info('${PKG_NAME}')"
