--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(feather2calc_genoprob)
 export(feather_genoprob)
 export(feather_genoprob_restore)
 export(rbind.feather_genoprob)
+export(subset.feather_genoprob)
+export(subset_feather_genoprob)
 importFrom(dplyr,bind_cols)
 importFrom(feather,read_feather)
 importFrom(feather,write_feather)
