--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: qtl2feather
-Version: 0.3-1
-Date: 2018-01-12
+Version: 0.3-2
+Date: 2018-02-11
 Title: Feather Database for R/qtl2 Genotype Probabilities
 Description: Functions to rbind, cbind and subset `calc_genoprob` objects.
 Author: Petr Simecek <Petr.Simecek@jax.org>, Brian S Yandell <byandell@wisc.edu>,
@@ -13,7 +13,9 @@ Imports:
     dplyr
 Suggests:
     testthat,
-    qtl2 (>= 0.8)
+    qtl2 (>= 0.8),
+    knitr, rmarkdown
+VignetteBuilder: knitr
 License: GPL-3
 URL: https://github.com/byandell/qtl2feather
 LazyData: true
