remove dplyr, qtl2ggplot and qtl2pattern from package

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ cache: packages
 
 r_packages:
  - devtools
+ - feather
 
 r_github_packages:
  - rqtl/qtl2
- - byandell/qtl2ggplot
 
 addons:
   apt:
