add feather2fst_genoprob and refer to qtl2fst

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: qtl2feather
-Version: 0.3-7
-Date: 2018-02-15
+Version: 0.3-8
+Date: 2018-03-17
 Title: Feather Database for R/qtl2 Genotype Probabilities
 Description: Functions to rbind, cbind and subset `calc_genoprob` objects.
+    Please refer to qtl2fst as faster database access approach.
 Author: Petr Simecek <Petr.Simecek@jax.org>, Brian S Yandell <byandell@wisc.edu>,
     and Karl W Broman <kbroman@biostat.wisc.edu>
 Maintainer: Brian S Yandell <byandell@wisc.edu>
@@ -13,6 +14,7 @@ Imports:
 Suggests:
     testthat,
     qtl2 (>= 0.8),
+    fst,
     knitr, rmarkdown
 VignetteBuilder: knitr
 License: GPL-3
