--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,11 @@ S3method(rbind,feather_genoprob)
 S3method(subset,feather_genoprob)
 export(cbind.feather_genoprob)
 export(feather2calc_genoprob)
+export(feather2fst_genoprob)
 export(feather_genoprob)
 export(feather_genoprob_restore)
 export(rbind.feather_genoprob)
 export(subset_feather_genoprob)
 importFrom(feather,read_feather)
 importFrom(feather,write_feather)
+importFrom(fst,write_fst)
