--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: qtl2feather
-Version: 0.3-9
+Version: 0.3-10
 Date: 2018-03-19
 Title: Feather Database for R/qtl2 Genotype Probabilities
 Description: Functions to rbind, cbind and subset `calc_genoprob` objects.
@@ -14,7 +14,7 @@ Imports:
 Suggests:
     testthat,
     qtl2 (>= 0.8),
-    qtl2fst, fst
+    qtl2fst, fst,
     knitr, rmarkdown
 VignetteBuilder: knitr
 License: GPL-3
